--- a/Krishna.css
+++ b/Krishna.css
@@ -915,7 +915,7 @@ The 2 items above are not owned by me, They go to there respected owners
        margin: 0px;
    }
    #app-mount .typeWindows__5fa63:after {
-       content: "Redline v1.0 By Krishna";
+       content: "Redline v1.0 By Randi Ash";
        color: rgb(255,255,255,0.5);
        font-weight: 500;
 
